# atrieve-job-notifier

./: .gitignore  CONTRIBUTING.rst  LICENSE  README.md  config_template.toml  mkdocs.yml  pyproject.toml
atrieve_job_notifier/: email_sender.py  main.py  password_init.py
docs/: index.md  modules.md
tests/: test_foo.py
