[tool.poetry]
name = "atrieve_job_notifier"
version = "0.0.1"
description = "ThiThis is a program to notify the user of new teaching job posting from the Atrieve Job Portal"
authors = ["Jonathan Down <fjcdown@ualberta.ca>"]
repository = "https://github.com/jono-vision/atrieve-job-notifier"
documentation = "https://jono-vision.github.io/atrieve-job-notifier/"
readme = "README.md"
packages = [
  {include = "atrieve_job_notifier"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
wheel = "^0.38.4"
toml = "^0.10.2"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.0"
webdriver-manager = "^3.8.5"
lxml = "^4.9.2"
cryptography = "^39.0.0"
keyring = "^23.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["atrieve_job_notifier"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]



